--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,13 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>hawk.iit.edu</groupId>
   <artifactId>tera-sort</artifactId>
-  <version>0.0.1</version>
+  <version>0.0.2-SNAPSHOT</version>
   <name>Tera-Sort</name>
   <scm>
   	<url>https://github.com/marrosenfeld/tera-sort.git</url>
 	<connection>scm:git:git://github.com/marrosenfeld/tera-sort.git</connection>
 	<developerConnection>scm:git:git@github.com:marrosenfeld/tera-sort.git</developerConnection>
-    <tag>tera-sort-0.0.1</tag>
+    <tag>HEAD</tag>
   </scm>
   <build>
   	<plugins>
