--- a/pom.xml
+++ b/pom.xml
@@ -24,5 +24,13 @@
 	  </plugin>
   	</plugins>
   </build>
+  <dependencies>
+  	<dependency>
+		<groupId>org.apache.commons</groupId>
+		<artifactId>commons-lang3</artifactId>
+		<version>3.0</version>
+	</dependency>
+  </dependencies>
+    
     
 </project>
