--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,8 @@
   </scm>
   <build>
   	<plugins>
-	  	<plugin>
+	  
+	  <plugin>
 	    <groupId>org.apache.maven.plugins</groupId>
 	    <artifactId>maven-release-plugin</artifactId>
 	    <version>2.5.3</version>
@@ -22,6 +23,24 @@
 	      <releaseProfiles>release</releaseProfiles>
 	    </configuration>
 	  </plugin>
+	  <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+        	<finalName>shared-memory-tera-sort</finalName>
+          	<descriptorRefs>
+            	<descriptorRef>jar-with-dependencies</descriptorRef>
+          	</descriptorRefs>
+          	<appendAssemblyId>false</appendAssemblyId>
+        </configuration>
+      </plugin>
   	</plugins>
   </build>
   <dependencies>
