--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,14 @@
           	<appendAssemblyId>false</appendAssemblyId>
         </configuration>
       </plugin>
+      <plugin>
+		  <groupId>org.apache.maven.plugins</groupId>
+		  <artifactId>maven-surefire-plugin</artifactId>
+		  <version>2.4.1</version>
+		  <configuration>
+		    <argLine>-Xmx2048m</argLine>
+	  	</configuration>
+	</plugin>
   	</plugins>
   </build>
   <dependencies>
